quil-rs/src/program/scheduling/snapshots/quil_rs__program__scheduling__graphviz_dot__tests__graph__jump.snap
---
source: quil-rs/src/program/scheduling/graphviz_dot.rs
expression: dot_format
---
digraph {
  entry -> "@first-block_start";
  entry [label="Entry Point"];
  subgraph cluster_0 {
    label="@first-block";
    node [style="filled"];
    "@first-block_start" [shape=circle, label="start"];
    "@first-block_start" -> "@first-block_0" [label="ordering
timing"];
    "@first-block_start" -> "@first-block_end" [label="ordering
timing"];
    "@first-block_0" [shape=rectangle, label="[0] PULSE 0 \"rf\" test(duration: 1000000)"];
    "@first-block_0" -> "@first-block_end" [label="ordering
timing"];
    "@first-block_end" [shape=circle, label="end"];
  }
  "@first-block_end" -> "@third-block_start" [label="if ro[0] != 0"];
  "@first-block_end" -> "@second-block_start" [label="if ro[0] == 0"];
  subgraph cluster_1 {
    label="@second-block";
    node [style="filled"];
    "@second-block_start" [shape=circle, label="start"];
    "@second-block_start" -> "@second-block_0" [label="ordering
timing"];
    "@second-block_start" -> "@second-block_end" [label="ordering
timing"];
    "@second-block_0" [shape=rectangle, label="[0] PULSE 0 \"rf\" test(duration: 1000000)"];
    "@second-block_0" -> "@second-block_end" [label="ordering
timing"];
    "@second-block_end" [shape=circle, label="end"];
  }
  "@second-block_end" -> "@third-block_start" [label="always"];
  subgraph cluster_2 {
    label="@third-block";
    node [style="filled"];
    "@third-block_start" [shape=circle, label="start"];
    "@third-block_start" -> "@third-block_0" [label="ordering
timing"];
    "@third-block_start" -> "@third-block_end" [label="ordering
timing"];
    "@third-block_0" [shape=rectangle, label="[0] PULSE 0 \"rf\" test(duration: 1000000)"];
    "@third-block_0" -> "@third-block_end" [label="ordering
timing"];
    "@third-block_end" [shape=circle, label="end"];
  }
}

