quil-rs/src/program/scheduling/snapshots/quil_rs__program__scheduling__graphviz_dot__tests__graph__labels_only.snap
---
source: quil-rs/src/program/scheduling/graphviz_dot.rs
expression: dot_format
---
digraph {
  entry -> "@c_start";
  entry [label="Entry Point"];
  subgraph cluster_0 {
    label="@c";
    node [style="filled"];
    "@c_start" [shape=circle, label="start"];
    "@c_start" -> "@c_end" [label="ordering"];
    "@c_end" [shape=circle, label="end"];
  }
}

